# gabutytb

./: .SRCINFO  .gitignore  PKGBUILD  README.md  README_FLATPAK.md  com.github.gabutakut.gabutytb.in  com.github.gabutakut.gabutytb.json  main.py  meson.build  server.py  splash.py  window.py
.github/workflows/: aur-publish.yml  ppa.yml
data/: com.github.gabutakut.gabutytb.appdata.xml  com.github.gabutakut.gabutytb.desktop  com.github.gabutakut.gabutytb.metainfo.xml
debian/: changelog  control  copyright  rules
snap/: snapcraft.yaml
